...
            android:textSize="@dimen/text_size_tiny"
            android:textStyle="bold"
            android:letterSpacing="0.06"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewProcessedUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_size_result"
...
